[package]
name = "tencent_sms"
version = "0.1.0"
authors = ["tingfeng-key <1770963469@qq.com>"]
edition = "2018"
keywords = ["sms", "tencent", "http", "POST"]
exclude = ["target", "Cargo.lock", ".gitignore", ".idea"]
description = "tencent sms"
homepage = "https://github.com/tingfeng-key/tencent_sms"
repository = "https://github.com/tingfeng-key/tencent_sms"
readme = "README.md"
license-file = "LICENSE"
version = "0.1.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
awc = "2.0.3"
chrono = { version="0.4.19", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.61"
crypto-hash = "0.3.4"
hex = "0.4.2"
hmac = "0.10.1"
sha2 = "0.9.2"
log = "0.4.13"