[package]
name = "tencent_sms"
version = "0.1.2"
authors = ["tingfeng-key <1770963469@qq.com>"]
edition = "2018"
keywords = ["sms", "tencent", "http", "POST"]
exclude = ["target", "Cargo.lock", ".gitignore", ".idea"]
description = "tencent sms"
homepage = "https://github.com/tingfeng-key/tencent_sms"
repository = "https://github.com/tingfeng-key/tencent_sms"
readme = "README.md"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
awc = "2.0"
chrono = { version="0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
crypto-hash = "0.3"
hex = "0.4"
hmac = "0.10"
sha2 = "0.9"
log = "0.4"